--- a/static/index.html
+++ b/static/index.html
@@ -59,11 +59,11 @@
   </div>
   <div class="Input-Search">
     <h2>Get Count Of All Labels </h2>
-    <button id="get-Label">Find</button>
+    <button id="get-label">Find</button>
   </div>
   <div class="Input-Results">
     <h2>Label Counts</h2>
-    <ol id="Label-data"></ol>
+    <ol id="label-data"></ol>
   </div>
   <div class="Input-Search">
     <h2>Delete Label</h2>
