--- a/static/index.html
+++ b/static/index.html
@@ -71,15 +71,24 @@
     <button id="get-LabelDel">Delete</button>
   </div>
   <div class="Input-Search">
+    <h2>Get All Packages </h2>
+    <button id="get-packages">Expand</button>
+  </div>
+  <div class="Input-Results">
+    <h2>Results</h2>
+    <ol id="package-data"></ol>
+  </div>
+  <div class="Input-Search">
     <h2>Start Shipment</h2>
-    <input type="text" id="employeeID-val" placeholder="Input employeeID">
-    <input type="text" id="packageType-val" placeholder="Input packageType">
-    <input type="text" id="packageStock-val" placeholder="Input packageStock">
+    <input type="text" id="city-val" placeholder="Input city">
+    <input type="text" id="streetName-val" placeholder="Input streetName">
+    <input type="text" id="streetNumber-val" placeholder="Input streetNumber">
+    <input type="text" id="postalCode-val" placeholder="Input postalCode">
     <button id="put-shipment">Start</button>
   </div>
   <div class="Input-Search">
-    <h2>Delete Label</h2>
-    <input type="text" id="find-shipment" placeholder="Input employeeID">
+    <h2>All Packages</h2>
+    <input type="text" id="find-shipment" placeholder="Input city">
     <button id="get-shipment">Find</button>
   </div>
   <div class="Input-Results">
