added hide buttons

--- a/static/index.html
+++ b/static/index.html
@@ -52,6 +52,7 @@
   <div class="Input-Search">
     <h2>Get Procured For Batch Mixes </h2>
     <button id="get-batchMix">Find</button>
+    <button id="get-batchMix-hide">Hide</button>
   </div>
   <div class="Input-Results">
     <h2>Results</h2>
@@ -60,6 +61,7 @@
   <div class="Input-Search">
     <h2>Get Count Of All Labels </h2>
     <button id="get-label">Find</button>
+    <button id="get-label-hide">Hide</button>
   </div>
   <div class="Input-Results">
     <h2>Label Counts</h2>
@@ -73,6 +75,7 @@
   <div class="Input-Search">
     <h2>Get All Packages </h2>
     <button id="get-packages">Expand</button>
+    <button id="get-packages-hide">Hide</button>
   </div>
   <div class="Input-Results">
     <h2>Results</h2>
