--- a/static/index.html
+++ b/static/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-  <h1>Small World Baked Goods</h1>
+  <h1 class="title">Small World Baked Goods</h1>
   <div class="Input-Search">
     <h2>Find Total Cost Of A Recipe</h2>
     <input type="text" id="find-cost" placeholder="Search by recipeID">
     <button id="get-cost">Find</button>
   </div>
   <div class="Input-Results">
-    <h2>Total Cost</h2>
+    <h2>Total Cost:</h2>
     <ol id="cost-data"></ol>
   </div>
   <div class="Input-Search">
@@ -26,7 +26,7 @@
     <button id="get-stock">Find</button>
   </div>
   <div class="Input-Results">
-    <h2>All Stocks</h2>
+    <h2>All Stocks:</h2>
     <ol id="stock-data"></ol>
   </div>
   <div class="Input-Search">
@@ -46,7 +46,7 @@
     <button id="get-procurement">Find</button>
   </div>
   <div class="Input-Results">
-    <h2>Procurements</h2>
+    <h2>Procurements:</h2>
     <ol id="procurement-data"></ol>
   </div>
   <div class="Input-Search">
@@ -55,7 +55,7 @@
     <button id="get-batchMix-hide">Hide</button>
   </div>
   <div class="Input-Results">
-    <h2>Results</h2>
+    <h2>Results:</h2>
     <ol id="batchMix-data"></ol>
   </div>
   <div class="Input-Search">
@@ -64,7 +64,7 @@
     <button id="get-label-hide">Hide</button>
   </div>
   <div class="Input-Results">
-    <h2>Label Counts</h2>
+    <h2>Label Counts:</h2>
     <ol id="label-data"></ol>
   </div>
   <div class="Input-Search">
@@ -78,7 +78,7 @@
     <button id="get-packages-hide">Hide</button>
   </div>
   <div class="Input-Results">
-    <h2>Results</h2>
+    <h2>Results:</h2>
     <ol id="package-data"></ol>
   </div>
   <div class="Input-Search">
@@ -95,7 +95,7 @@
     <button id="get-shipment">Find</button>
   </div>
   <div class="Input-Results">
-    <h2>Shipments</h2>
+    <h2>Shipments:</h2>
     <ol id="shipment-data"></ol>
   </div>
 
